--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>Sveltekit + Electron</title>
 		%sveltekit.head%
 	</head>
-	<body>
+	<body class="dark">
 		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
